--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   "author": "AlbaNav",
   "license": "ISC",
   "dependencies": {
+    "@cucumber/cucumber": "^7.3.2",
+    "axios": "^0.26.1",
+    "chai": "^4.3.6",
     "selenium-webdriver": "^4.1.1"
   },
   "webdriver": [
